--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -86,7 +86,7 @@
         <!--Search result - View Controller-->
         <scene sceneID="9LQ-lt-kCX">
             <objects>
-                <viewController id="E9P-Md-6eo" userLabel="Search result - View Controller" customClass="ShoesViewController" customModule="Shoestore" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="E9P-Md-6eo" userLabel="Search result - View Controller" customClass="ShoesResultViewController" customModule="Shoestore" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3po-pH-8lM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -95,13 +95,13 @@
                                 <rect key="frame" x="8" y="40" width="375" height="48"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="SHOESTORE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e36-m7-N57">
-                                        <rect key="frame" x="0.0" y="0.0" width="285" height="48"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="293" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="km5-EG-rVa">
-                                        <rect key="frame" x="289" y="0.0" width="86" height="48"/>
+                                        <rect key="frame" x="297" y="0.0" width="78" height="48"/>
                                         <state key="normal" title="Button" image="filter"/>
                                     </button>
                                 </subviews>
@@ -116,7 +116,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6Fx-G0-9lF">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellShoe" id="6Fx-G0-9lF" customClass="SearchResultViewCell" customModule="Shoestore" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="144" height="236"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -162,6 +162,11 @@
                                             <constraint firstAttribute="trailing" secondItem="wmC-Qo-P28" secondAttribute="trailing" constant="9" id="rkN-Kf-Gt0"/>
                                             <constraint firstItem="wmC-Qo-P28" firstAttribute="leading" secondItem="6Fx-G0-9lF" secondAttribute="leading" constant="9" id="xWu-02-kw8"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="Brand" destination="hcn-Hk-i08" id="X1t-MR-nFy"/>
+                                            <outlet property="model" destination="OKT-2N-qls" id="vYf-bw-fSF"/>
+                                            <outlet property="price" destination="ZUw-q0-soL" id="aSe-EN-CHe"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -179,7 +184,7 @@
                         <viewLayoutGuide key="safeArea" id="dnO-sa-Tlt"/>
                     </view>
                     <connections>
-                        <outlet property="shoeCollection" destination="IzR-8O-0nH" id="cAC-rg-VQ9"/>
+                        <outlet property="shoeCollection" destination="IzR-8O-0nH" id="QXj-E4-in8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gm7-yN-7wR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -203,23 +208,14 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ye5-1Q-sEg">
                                         <rect key="frame" x="0.0" y="476" width="359" height="30"/>
                                         <state key="normal" title="Cesta"/>
-                                        <connections>
-                                            <action selector="irCesta:" destination="re6-Gc-JoJ" eventType="touchUpInside" id="WVw-oP-GFj"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XhD-XB-k9c">
                                         <rect key="frame" x="0.0" y="514" width="359" height="30"/>
                                         <state key="normal" title="Perfil"/>
-                                        <connections>
-                                            <action selector="irPerfil:" destination="re6-Gc-JoJ" eventType="touchUpInside" id="Vm1-sl-CY3"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xPO-5f-uUl">
                                         <rect key="frame" x="0.0" y="552" width="359" height="30"/>
                                         <state key="normal" title="Ayuda"/>
-                                        <connections>
-                                            <action selector="irAyuda:" destination="re6-Gc-JoJ" eventType="touchUpInside" id="bPX-oZ-bGt"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -235,12 +231,6 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="man-user (1)" id="WdP-2U-zS7"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="btnAyuda" destination="xPO-5f-uUl" id="gM7-3X-ZXq"/>
-                        <outlet property="btnCesta" destination="Ye5-1Q-sEg" id="EPO-7x-o3d"/>
-                        <outlet property="btnPerfil" destination="XhD-XB-k9c" id="iKA-iv-c0l"/>
-                        <outlet property="imageUser" destination="Mvc-3K-qJm" id="VYc-fQ-sHn"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xdt-fJ-TV1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -319,17 +309,17 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mOw-PU-AmU">
-                                <rect key="frame" x="283" y="265" width="84" height="30"/>
+                                <rect key="frame" x="289" y="265" width="78" height="30"/>
                                 <state key="normal" title="Button" image="add-shoe"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MODELO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kZW-aU-5sG">
-                                <rect key="frame" x="82" y="265" width="71" height="21"/>
+                                <rect key="frame" x="88" y="265" width="71" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A partir de: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqn-Lw-Zba">
-                                <rect key="frame" x="173" y="265" width="90" height="21"/>
+                                <rect key="frame" x="179" y="265" width="90" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -530,13 +520,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="add-shoe" width="30" height="30"/>
-        <image name="filter" width="32" height="32"/>
-        <image name="home (1)" width="30" height="30"/>
-        <image name="man-user (1)" width="32" height="32"/>
-        <image name="musica-searcher" width="32" height="32"/>
+        <image name="add-shoe" width="24" height="24"/>
+        <image name="filter" width="24" height="24"/>
+        <image name="home (1)" width="24" height="24"/>
+        <image name="man-user (1)" width="24" height="24"/>
+        <image name="musica-searcher" width="24" height="24"/>
         <image name="shoe" width="225" height="225"/>
-        <image name="shopping-bag (1)" width="30" height="30"/>
+        <image name="shopping-bag (1)" width="24" height="24"/>
         <image name="user" width="512" height="512"/>
     </resources>
 </document>
