--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -334,11 +334,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vpr-23-b5i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-895" y="37"/>
+            <point key="canvasLocation" x="-1532" y="812"/>
         </scene>
         <!--Detail shoe - View Controller-->
         <scene sceneID="nqH-ge-caI">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cxv-Dt-l3s" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="RZf-LZ-XqO" userLabel="Detail shoe - View Controller" customClass="DetailViewController" customModule="Shoestore" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QVr-Ol-E1A">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -425,6 +426,19 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ez4-uY-uJb">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem id="Y6P-vO-qK5">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="oRu-V3-2Yy">
+                                            <connections>
+                                                <action selector="btnBack:" destination="RZf-LZ-XqO" id="9gk-Gz-rZW"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -450,9 +464,8 @@
                         <viewLayoutGuide key="safeArea" id="N0h-hJ-FXm"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Cxv-Dt-l3s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-218" y="37"/>
+            <point key="canvasLocation" x="-1698" y="-1593"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="thQ-6M-X9h">
@@ -631,7 +644,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2503" y="14"/>
+            <point key="canvasLocation" x="-2503" y="36"/>
         </scene>
     </scenes>
     <resources>
